Changed TripStatus enum to Upper_Case.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<script src="/webjars/jquery/3.4.1/jquery.min.js" language="JavaScript"></script>
+<script src="scripts/main.js" language="JavaScript"></script>
+Hi
 </body>
 </html>
