--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -66,3 +66,10 @@ div.profile-container {
     font-size: 24px;
     font-weight: bold;
 }
+
+ div.profile-container {
+     width: 100%;
+     margin-left: auto;
+     margin-right: auto;
+     text-align: center;
+ }
